# simple_robot_path_planning

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  simple_diff_drive.yaml
launch/: amcl.launch  clickToMove.launch  move_base.launch
maps/: mymap.pgm  mymap.yaml
rviz/: urdf.rviz
urdf/: simple_robot_path_planning.gazebo  simple_robot_path_planning.xacro
